[package]
name = "aoc-2021"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = "0.4"
simple_logger = "2"
lazy_static = "1"
# index_list = "0.2"

[profile.release]
lto = "full"
